--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.15.1",
         "@fortawesome/free-solid-svg-icons": "^5.15.1",
         "react-avatar": "^3.9.7",
+        "react-double-marquee": "^1.0.6",
         "react-fontawesome": "^1.7.1",
         "react-router-dom": "^5.2.0",
         "react-spinners": "^0.9.0"
