--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ APP_DEBUG=true
 APP_URL=http://localhost
 SANCTUM_STATEFUL_DOMAINS=localhost,localhost:8000,127.0.0.1,127.0.0.1:8000,::1
 
+# Podcast API
+# Get your free key here: https://www.listennotes.com/api/
+MIX_LISTEN_API_KEY=
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
