Update readme, stateful domains

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=Soprano
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+# Add your production domain to this list if you plan on hosting 
 SANCTUM_STATEFUL_DOMAINS=localhost,localhost:8000,127.0.0.1,127.0.0.1:8000,::1
 
 # Podcast API
