--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: '3.7'
+version: "3.7"
 services:
-
   #PHP Service
   app:
     build:
@@ -16,6 +15,7 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
+      - ${MUSIC_DIR}:/music
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
@@ -31,6 +31,7 @@ services:
       - "443:443"
     volumes:
       - ./:/var/www
+      - ${MUSIC_DIR}:/music
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
@@ -44,8 +45,8 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_DATABASE: soprano
-      MYSQL_ROOT_PASSWORD: 1E5MP5R5scz1
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
