--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
-      - ${MUSIC_DIR}:/music
+      - ${MUSIC_DIR}:${SOPRANO_MOUNT}
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
