--- a/docker/nginx/conf.d/app.example.conf
+++ b/docker/nginx/conf.d/app.example.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ${APP_DOMAIN};
+    server_name localhost;
     root /var/www/public;
     
     add_header X-Frame-Options "SAMEORIGIN";
