--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,17 @@ MIX_LISTEN_API_KEY=
 
 LOG_CHANNEL=stack
 
+# Docker config
+DB_SERVICE=db
+MUSIC_DIR=/some/dir/with/music
+SOPRANO_MOUNT=/music
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=${DB_SERVICE}
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=?
+DB_USERNAME=?
+DB_PASSWORD=?
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
