Update env example

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,14 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_DOMAIN=localhost
 
 # Add your production domain to this list if you plan on hosting 
 SANCTUM_STATEFUL_DOMAINS=localhost,localhost:8000,127.0.0.1,127.0.0.1:8000,::1
 
 # Podcast API
 # Get your free key here: https://www.listennotes.com/api/
-MIX_LISTEN_API_KEY=
+MIX_LISTEN_API_KEY=?
 
 LOG_CHANNEL=stack
 
@@ -21,15 +22,15 @@ SOPRANO_MOUNT=/music
 DB_CONNECTION=mysql
 DB_HOST=${DB_SERVICE}
 DB_PORT=3306
-DB_DATABASE=?
-DB_USERNAME=?
-DB_PASSWORD=?
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_LIFETIME=360
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
