--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-double-marquee": "^1.0.7",
         "react-fontawesome": "^1.7.1",
         "react-infinite-scroller": "^1.2.4",
+        "react-lazy-load-image-component": "^1.5.1",
         "react-router-dom": "^5.2.0",
         "react-spinners": "^0.9.0"
     }
