--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -14,8 +14,8 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
-        "php-ffmpeg/extras": "^0.3.1",
-        "php-ffmpeg/php-ffmpeg": "^0.16.0"
+        "php-ffmpeg/extras": ">=0.3.1",
+        "php-ffmpeg/php-ffmpeg": ">=0.16.0"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
